Correctly align social link icons

--- a/app/assets/stylesheets/blog-themes.css
+++ b/app/assets/stylesheets/blog-themes.css
@@ -509,6 +509,9 @@ html, body {
   }
 
   .social-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: var(--color-text-light) !important;
   }
 
